recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:9: error: type mismatch;
 found   : Unit
 required: java.awt.Color
    setColor(current(steps))
                    ^